# typhoon

./: CHANGELOG.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
benches/program-bench/: Cargo.toml
benches/program-bench/benches/: bench.rs
benches/program-bench/benches/programs/: Cargo.toml
benches/program-bench/benches/programs/anchor/: Cargo.toml
benches/program-bench/src/: lib.rs
crates/account-macro/: Cargo.toml
crates/account-macro/src/: keys.rs  lib.rs
crates/account-macro/tests/account_attribute/: enum.fail.stderr  struct.pass.rs
crates/accounts/: Cargo.toml
crates/accounts/src/: discriminator.rs  lib.rs  programs.rs  readable.rs  utils.rs
crates/accounts/src/accounts/: account.rs  borsh.rs  interface.rs  interface_account.rs  mod.rs  mutable.rs  option.rs  program.rs  signer.rs  system.rs  unchecked.rs
crates/borsh/: Cargo.toml
crates/borsh-macro/: Cargo.toml
crates/borsh-macro/src/: lib.rs  remover.rs  replace.rs  ty.rs
crates/borsh-macro/src/size/: arg.rs  mod.rs
crates/borsh-macro/tests/: borsh_macro.rs
crates/borsh/src/: accessor.rs  lib.rs  size.rs  vector.rs  writer.rs
crates/borsh/tests/: borsh_macro.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: add.rs  lib.rs  main.rs  new.rs  templates.rs  utils.rs
crates/cli/src/new/: mod.rs  templates.rs
crates/cli/templates/: Cargo.toml.template
crates/cli/templates/programs/: Cargo.toml.template  build.rs.template
crates/cli/templates/programs/src/: lib.rs.template
crates/cli/templates/tests/: Cargo.toml.template
crates/cli/tests/: add.rs  integration.rs  new.rs
crates/cli/tests/helpers/: mod.rs
crates/context/: Cargo.toml
crates/context-macro/: Cargo.toml
crates/context-macro/src/: accounts.rs  bumps.rs  context.rs  cross_checks.rs  lib.rs  sorter.rs  visitor.rs
crates/context-macro/src/constraints/: bump.rs  has_one.rs  keys.rs  mod.rs  payer.rs  seeded.rs  seeds.rs  space.rs  token.rs
crates/context-macro/src/generators/: account.rs  arguments.rs  assign.rs  bumps.rs  global_context.rs  has_one.rs  init.rs  init_if_needed.rs  mod.rs  rent.rs  state.rs  token.rs
crates/context-macro/src/injector/: lifetime.rs
crates/context-macro/src/utils/: expr.rs
crates/context-macro/tests/constraints/: init.pass.rs  init_seeds_keys.fail.rs  init_seeds_keys.fail.stderr  invalid_seeds_syntax.fail.rs  invalid_seeds_syntax.fail.stderr  invalid_token_variant.fail.rs  invalid_token_variant.fail.stderr  missing_associated_token_pogram.fail.rs  missing_associated_token_pogram.fail.stderr  missing_system_program.fail.rs  missing_system_program.fail.stderr  missing_token_pogram.fail.rs  missing_token_pogram.fail.stderr  seeded.pass.rs  seeds.pass.rs  seeds_keys.fail.rs  seeds_keys.fail.stderr
crates/context/src/: arg.rs  array.rs  iterator.rs  lib.rs  program_id.rs  remaining_accounts.rs
crates/context/src/args/: borsh.rs  bytemuck.rs
crates/cpi-generator/: Cargo.toml
crates/cpi-generator-macro/: Cargo.toml
crates/cpi-generator-macro/src/: lib.rs
crates/cpi-generator/src/: idl.rs  lib.rs
crates/cpi-generator/src/anchor/: account.rs  cpi.rs  idl.rs  instruction.rs  mod.rs  program_id.rs  type.rs
crates/discriminator-macro/: Cargo.toml
crates/errors/: Cargo.toml
crates/errors-macro/: Cargo.toml
crates/errors-macro/src/: lib.rs
crates/errors/src/: default_custom.rs  error_code.rs  extension.rs  lib.rs
crates/idl-generator/: Cargo.toml
crates/idl-generator/src/: lib.rs  main.rs  plugin.rs  utils.rs
crates/idl-generator/src/visitors/: apply_instruction_visitor.rs  context_visitor.rs  define_type_resolver.rs  instruction_resolver.rs  instruction_visitor.rs  mod.rs  program_visitor.rs  router_visitor.rs  set_account_visitor.rs  set_defined_types.rs  set_errors_visitor.rs  set_program_id_visitor.rs  set_type_visitor.rs
crates/idl-generator/tests/: idl.rs
crates/idl-generator/tests/crate/: Cargo.toml
crates/instruction-builder/: Cargo.toml
crates/instruction-builder/src/: instruction.rs  lib.rs  resolver.rs
crates/instruction-builder/src/generator/: client.rs  cpi.rs
crates/lib/: Cargo.toml
crates/lib/benches/: bench.rs
crates/lib/benches/programs/: Cargo.toml
crates/lib/benches/setup/: bench.rs  mod.rs  runner.rs
crates/lib/src/: lib.rs
crates/syn/: Cargo.toml
crates/syn/src/: account.rs  instruction.rs
crates/syn/src/constraints/: address.rs  assert.rs  mod.rs  seeded.rs  seeds.rs
crates/syn/src/utils/: expr.rs  seeds_expr.rs
crates/to-metas-macro/: Cargo.toml
crates/to-metas-macro/src/: lib.rs
crates/to-metas-macro/tests/to-metas/: struct.pass.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs
crates/token/src/traits/: create.rs  create_account.rs  create_mint.rs  mod.rs  token_account.rs
crates/traits/: Cargo.toml
crates/traits/src/: lib.rs
crates/traits/src/account/: borsh.rs  bytemuck.rs  mod.rs  wincode.rs
crates/utility/: Cargo.toml
crates/utility-traits/: Cargo.toml
crates/utility-traits/src/: close.rs  create.rs  lamport.rs  system.rs
crates/utility/src/: create_account.rs
crates/utility/src/bytes/: mod.rs  writer.rs
examples/anchor-cpi/tests/: Cargo.toml
examples/anchor-cpi/tests/tests/: lib.rs
examples/counter/: Cargo.toml
examples/counter/.cargo/: config.toml
examples/counter/src/: lib.rs
examples/counter/tests/: integration.rs
examples/cpi/: Cargo.toml
examples/cpi/interfaces/hand/: Cargo.toml
examples/cpi/interfaces/lever/: Cargo.toml
examples/cpi/programs/hand/: Cargo.toml
examples/cpi/programs/lever/: Cargo.toml
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/misc/: Cargo.toml
examples/misc/interface/: Cargo.toml
examples/misc/interface/src/: lib.rs  pda.rs  state.rs
examples/misc/program/: Cargo.toml
examples/misc/program/src/: lib.rs
examples/misc/program/tests/: integration.rs
examples/seeds/: Cargo.toml
examples/seeds/src/: lib.rs
examples/seeds/tests/: integration.rs
examples/transfer-token/: Cargo.toml
examples/transfer-token/src/: lib.rs
examples/transfer-token/tests/: integration.rs
(+121 files in other folders)
