[workspace]
members = ["crates/*"]
exclude = ["examples", "benches"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aursen"]
repository = "https://github.com/exotic-markets-labs/typhoon"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
borsh = { version = "1.5", default-features = false }
bytemuck = "1.24"
cargo-manifest = "0.19"
clap = { version = "4.5", features = ["derive"] }
codama = "0.7.2"
codama-attributes = "0.7.2"
codama-korok-plugins = "0.7.2"
codama-korok-visitors = "0.7.2"
codama-koroks = "0.7.2"
codama-nodes = "0.7.2"
codama-syn-helpers = "0.7.2"
const-crypto = "0.3"
handlebars = "5.1"
hashbrown = "0.16"
heck = "0.5"
pastey = "0.2.1"
pinocchio = { version = "0.10", default-features = false }
pinocchio-associated-token-account = "0.3"
pinocchio-system = "0.5"
pinocchio-token = "0.5"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
solana-account-view = "1.0.0"
solana-address = "2.0.0"
solana-instruction-view = "1.0.0"
solana-program-error = "3.0.0"
solana-program-log = "1.1.0"
solana-keypair = "3.1"
syn = "2.0"
temp-dir = "0.1.16"
toml_edit = "0.23.9"
trybuild = "1.0"
typhoon-account-macro = { version = "0.2.0", path = "crates/account-macro" }
typhoon-accounts = { version = "0.2.0", path = "crates/accounts" }
typhoon-context = { version = "0.2.0", path = "crates/context" }
typhoon-context-macro = { version = "0.2.0", path = "crates/context-macro" }
typhoon-cpi-generator = { version = "0.2.0", path = "crates/cpi-generator" }
typhoon-traits = { version = "0.2.0", path = "crates/traits" }
typhoon-cpi-generator-macro = { version = "0.2.0", path = "crates/cpi-generator-macro" }
typhoon-discriminator = { version = "0.2.0", path = "crates/discriminator" }
typhoon-errors = { version = "0.2.0", path = "crates/errors" }
typhoon-errors-macro = { version = "0.2.0", path = "crates/errors-macro" }
typhoon-program-id-macro = { version = "0.2.0", path = "crates/program-id-macro" }
typhoon-syn = { version = "0.2.0", path = "crates/syn" }
typhoon-token = { version = "0.2.0", path = "crates/token" }
typhoon-utility = { version = "0.2.0", path = "crates/utility" }
typhoon-utility-traits = { version = "0.2.0", path = "crates/utility-traits" }
