[package]
name = "program-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "bench"
harness = false

[dependencies]
litesvm = "0.8"
serde = "1.0"
solana-hash = "3.0"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"
solana-system-interface = "2.0"
solana-transaction = "3.0"

[dev-dependencies]
serde_json = "1.0"
