[package]
name = "typhoon-account-macro"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
typhoon-discriminator.workspace = true

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive"] }
solana-address = { workspace = true, features = ["bytemuck", "copy"] }
solana-instruction-view = { workspace = true, features = ["cpi"] }
trybuild.workspace = true
typhoon-traits.workspace = true
