[package]
name = "typhoon-accounts"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
pinocchio.workspace = true
solana-account-view.workspace = true
solana-address.workspace = true
solana-program-error.workspace = true
typhoon-errors.workspace = true
typhoon-traits.workspace = true
