[package]
name = "typhoon-accounts"
description = "Account types and traits"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck.workspace = true
pinocchio.workspace = true
solana-account-view.workspace = true
solana-address.workspace = true
solana-program-error.workspace = true
typhoon-errors.workspace = true
typhoon-traits.workspace = true
