[package]
name = "typhoon-borsh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
typhoon-borsh-macro.workspace = true
pinocchio.workspace = true

[dev-dependencies]
typhoon-borsh-macro = { workspace = true, features = ["test"] }
borsh = { workspace = true, features = ["derive"] }
pinocchio.workspace = true
