[package]
name = "typhoon-context-macro"
description = "Procedural macro for generating instruction context structs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["visit-mut", "full"] }
typhoon-syn.workspace = true

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive"] }
pinocchio.workspace = true
solana-address = { workspace = true, features = ["bytemuck", "copy"] }
trybuild.workspace = true
typhoon-account-macro.workspace = true
typhoon-accounts.workspace = true
typhoon-context.workspace = true
typhoon-errors.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-token.workspace = true
typhoon-traits.workspace = true
typhoon-utility-traits.workspace = true

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dev-dependencies]
solana-address = { workspace = true, features = ["curve25519"] }
