[package]
name = "typhoon-context"
description = "Context extractors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["borsh"]
borsh = ["dep:borsh"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
pastey.workspace = true
solana-account-view.workspace = true
solana-address.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
