[package]
name = "typhoon-cpi-generator"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
five8_const.workspace = true
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
syn = { workspace = true, features = ["full"] }
