[package]
name = "typhoon-errors-macro"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
typhoon-syn.workspace = true

[dev-dependencies]
typhoon-errors.workspace = true
pinocchio.workspace = true
