[package]
name = "typhoon-errors"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
logging = ["dep:solana-program-log"]

[dependencies]
solana-address = { workspace = true, features = ["error"] }
solana-program-error.workspace = true
solana-program-log = { workspace = true, optional = true }
