[package]
name = "typhoon-idl-generator"
description = "IDL generation from Rust program code"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
codama-attributes.workspace = true
codama-korok-visitors.workspace = true
codama-koroks.workspace = true
codama-nodes.workspace = true
codama-plugin-core.workspace = true
codama-syn-helpers.workspace = true
codama.workspace = true
hashbrown.workspace = true
syn = { workspace = true, features = ["full", "visit"] }
typhoon-discriminator.workspace = true
typhoon-syn.workspace = true

[dev-dependencies]
quote.workspace = true
