[package]
name = "typhoon"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
borsh = ["typhoon-accounts/borsh"]
pinocchio = ["typhoon-program/pinocchio"]

[[bench]]
name = "bench"
harness = false

[dependencies]
typhoon-accounts.workspace = true
typhoon-account-macro.workspace = true
typhoon-errors.workspace = true
typhoon-context.workspace = true
typhoon-context-macro.workspace = true
typhoon-cpi-generator-macro.workspace = true
typhoon-handler-macro.workspace = true
typhoon-program.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-traits.workspace = true

[dev-dependencies]
litesvm.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
solana-logger.workspace = true
solana-sdk.workspace = true
