[package]
name = "typhoon"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
borsh = [
    "typhoon-accounts/borsh",
    "typhoon-utility/borsh",
    "typhoon-context/borsh",
]
alloc = ["pinocchio/alloc"]

[dependencies]
pinocchio.workspace = true
solana-address = { workspace = true, features = [
    "copy",
    "bytemuck",
] } # Fix later to put behind feature flag
solana-instruction-view = { workspace = true, features = ["slice-cpi"] }
typhoon-accounts.workspace = true
typhoon-account-macro.workspace = true
typhoon-errors.workspace = true
typhoon-errors-macro.workspace = true
typhoon-context.workspace = true
typhoon-context-macro.workspace = true
typhoon-cpi-generator-macro.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-traits.workspace = true
typhoon-utility.workspace = true
typhoon-utility-traits.workspace = true
