[package]
name = "typhoon-syn"
description = "Syntax tree utilities and helpers for macro processing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heck.workspace = true
syn = { workspace = true, features = ["visit", "fold", "full"] }
quote.workspace = true
proc-macro2.workspace = true
