[package]
name = "typhoon-to-metas-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full", "visit"] }

[dev-dependencies]
trybuild.workspace = true
typhoon-accounts.workspace = true
typhoon-instruction-builder.workspace = true
