[package]
name = "typhoon-token"
description = "TODO"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
five8_const.workspace = true
pinocchio-associated-token-account = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
typhoon-traits.workspace = true
typhoon-utility.workspace = true
