[package]
name = "typhoon-token"
description = "SPL token program integration and account types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
solana-address = { workspace = true, features = ["decode"] }
pinocchio-associated-token-account = { workspace = true }
pinocchio-token = { workspace = true }
pinocchio.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
typhoon-traits.workspace = true
typhoon-utility.workspace = true

[target.'cfg(not(any(target_os = "solana", target_arch = "bpf")))'.dependencies]
solana-address = { workspace = true, features = ["curve25519"] }
