[package]
name = "typhoon-traits"
description = "Core trait definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
borsh = ["dep:borsh"]
bytemuck = ["dep:bytemuck"]
wincode = ["dep:wincode"]

[dependencies]
borsh = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
solana-address.workspace = true
solana-program-error.workspace = true
wincode = { workspace = true, optional = true }
