[package]
name = "typhoon-utility-traits"
description = "Trait extensions for account operations"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pinocchio-system.workspace = true
pinocchio.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
typhoon-traits.workspace = true
typhoon-utility.workspace = true
