[package]
name = "typhoon-utility"
description = "Utility functions and helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
borsh = ["dep:borsh"]

[dependencies]
borsh = { workspace = true, optional = true }
pinocchio.workspace = true
pinocchio-system.workspace = true
typhoon-accounts.workspace = true
typhoon-errors.workspace = true
