[workspace]
members = ["programs/*", "interfaces/*", "tests/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.23"
hand-interface = { path = "interfaces/hand" }
lever-interface = { path = "interfaces/lever" }
litesvm = "0.9.1"
solana-address = "2.0"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-signer = "3.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0"
typhoon = { path = "../../crates/lib" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }

[profile.release]
lto = true
codegen-units = 1
