[workspace]
members = ["program", "interface"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.24"
solana-pubkey = "3.0"
solana-instruction = "3.0"
solana-transaction = "3.0"
solana-native-token = "3.0"
solana-keypair = "3.0"
misc-interface = { path = "interface" }
typhoon = { path = "../../crates/lib" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }
litesvm = "0.8"
