[workspace]
members = ["program", "interface"]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }


[workspace.dependencies]
bytemuck = "1.24"
litesvm = "0.9.0"
misc-interface = { path = "interface" }
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-transaction = "3.0"
typhoon = { path = "../../crates/lib" }
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }
