[package]
name = "seeds"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = "1.19"
pinocchio = { git = "https://github.com/febo/pinocchio", optional = true }
solana-nostd-entrypoint = { git = "https://github.com/cavemanloverboy/solana-nostd-entrypoint", optional = true }
solana-program = { version = "1.18", optional = true }
typhoon = { path = "../../crates/lib", features = ["pinocchio"] }

[dev-dependencies]
litesvm = "0.3.0"
solana-sdk = "2.0"
