[package]
name = "seeds"
version = "0.1.0"
edition = "2021"
publish = false

[features]
logging = []

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
typhoon = { path = "../../crates/lib" }

[dev-dependencies]
litesvm = "0.9.0"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-signer = "3.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0"
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }

[profile.release]
lto = true
codegen-units = 1
