[package]
name = "transfer_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint"]
pinocchio = ["typhoon/pinocchio", "typhoon-token/pinocchio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
solana-nostd-entrypoint = { git = "https://github.com/exotic-markets-labs/solana-nostd-entrypoint", rev = "bcccf73", optional = true }
typhoon = { path = "../../crates/lib" }
typhoon-token = { path = "../../crates/token" }

[dev-dependencies]
litesvm = "0.5.0"
solana-sdk = "2.1.10"
