[package]
name = "transfer_token"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
typhoon = { path = "../../crates/lib" }
typhoon-token = { path = "../../crates/token" }
# v1.9 specifies `rust-version = "1.84"`, which causes compatibility issues with Solana build
# tools' Rust version (1.79.0 at the time of writing this comment).
# TODO: Remove when the Solana version we use comes with Rust version >= 1.84
bytemuck_derive = ">1.0.0, <1.9"

[dev-dependencies]
litesvm = "0.6.0"
litesvm-token = "0.6.0"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
spl-associated-token-account-client = "2.0.0"
