[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
bytemuck = "1.23"
litesvm = "0.9.0"
typhoon = { path = "../../../crates/lib" }
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-native-token = "3.0"
solana-nostd-sha256 = "0.1.3"
solana-pubkey = "3.0"
solana-signer = "3.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0"
typhoon-instruction-builder = { path = "../../../crates/instruction-builder" }

[package.metadata.typhoon.builder-dependencies]
hand = { path = "../programs/hand" }
